Attempt to fix overscrolling on mobile using background-color instead

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 html {
-    overscroll-behavior: none;
+    background-color: rgb(20, 20, 20);
 }
 
 .content {
